@@ -1,5 +1,9 @@
 2014-06-20  Maciej W. Rozycki  <macro@codesourcery.com>
 
+	[BZ #16046]
+	* elf/tst-dl-iter-static.c: New file.
+	* elf/Makefile (tests-static): Add tst-dl-iter-static.
+
 	* stdlib/tst-qsort2.c (main): Fix off-by-one argc interpretation
 	error.
 
